Fixed vertical overflow and course upload image

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -143,3 +143,7 @@ table {
 label.autoHyphen {
 	hyphens: auto;
 }
+
+div.container-fluid > div > div.col-lg-10 {
+	overflow-y : scroll;
+}
